# 25ji_mp3

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  TODO.md  TODOS.md  sdkconfig
components/amp/: CMakeLists.txt  TODOS.md  amp_mem.c  audio_codec.c  audio_decoder.c  controller.c  dashboard.c  dashboard.h  devnull_writer.c  element_priv.h  file_reader.c  i2s_writer.c  playlist.c  ringbuf.c  sin_pcm_reader.c
components/amp/include/amp/: amp_event.h  amp_mem.h  audio_codec.h  audio_decoder.h  audio_types.h  controller.h  dashboard.h  devnull_writer.h  element.h  file_reader.h  i2s_writer.h  playlist.h  ringbuf.h  sin_pcm_reader.h
components/amp/test/: CMakeLists.txt  test_audio_codec.c  test_file_reader.c  test_i2s_writer.c  test_minimal_player.c  test_playlist.c
components/audio_play/: CMakeLists.txt  audio_player.c  audio_player.h
components/bsp/: CMakeLists.txt  bsp.c  bsp.h  bsp_sd_card.c  bsp_sd_card.h
components/bsp/test/: CMakeLists.txt  test_sd_card.c
components/sds/: CMakeLists.txt  LICENSE  sds.c
components/sensor/: CMakeLists.txt  aht20.c  aht20.h
components/ui/: CMakeLists.txt  u8g2_port.c  u8g2_port.h  ui.c  ui.h
components/ui/u8g2/: u8g2_d_memory.c  u8g2_d_setup.c
components/utils/: CMakeLists.txt
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml
main/src/: audio_player.c  audio_player.h  bench_sin.c  main.c  player.c  player.h
test_apps/amp/: CMakeLists.txt  partitions.csv  sdkconfig
test_apps/amp/main/: CMakeLists.txt  idf_component.yml  test_amp_main.c
test_apps/bsp/: CMakeLists.txt  sdkconfig
(+4 files in other folders)
